165343781-story(backend): user view followers and followee
- write test for the endpoint
- create the endpoint for getting followers and followee

[Delivers #165343781]
